Feat: Large Title

--- a/MyMemo/Base.lproj/Main.storyboard
+++ b/MyMemo/Base.lproj/Main.storyboard
@@ -12,9 +12,10 @@
         <scene sceneID="JyE-pd-koK">
             <objects>
                 <navigationController id="qFh-Lg-gvQ" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r3y-I4-DGk">
-                        <rect key="frame" x="0.0" y="50" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="r3y-I4-DGk">
+                        <rect key="frame" x="0.0" y="50" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.31764706970000001" green="0.64313727620000005" blue="0.9098039269" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </navigationBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="3et-KZ-Pxs"/>
@@ -24,7 +25,7 @@
             </objects>
             <point key="canvasLocation" x="-868" y="-8"/>
         </scene>
-        <!--Memo List View Controller-->
+        <!--메모-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="MemoListViewController" id="BYZ-38-t0r" customClass="MemoListViewController" customModule="MyMemo" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,27 +33,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="메모" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Use-xi-98Y">
-                                <rect key="frame" x="16" y="94" width="52" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Bold" family="Apple SD Gothic Neo" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5pD-Pg-thI">
-                                <rect key="frame" x="339" y="102" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="square.and.pencil" catalog="system">
-                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="20"/>
-                                    <color key="baseForegroundColor" red="0.31764706970000001" green="0.64313727620000005" blue="0.9098039269" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="moveCreateMemo:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GDY-ox-fYF"/>
-                                </connections>
-                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zwq-bl-jL7">
-                                <rect key="frame" x="0.0" y="138" width="375" height="674"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -95,15 +77,15 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <navigationItem key="navigationItem" id="fc6-vS-s6e"/>
+                    <navigationItem key="navigationItem" title="메모" largeTitleDisplayMode="always" id="fc6-vS-s6e"/>
                     <connections>
-                        <outlet property="myMemoLabel" destination="Use-xi-98Y" id="oVh-Ly-0gs"/>
                         <outlet property="myMemoList" destination="zwq-bl-jL7" id="yM9-HA-Fqr"/>
+                        <segue destination="4Qb-tl-Pqq" kind="show" id="1MV-JA-bDg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-39.200000000000003" y="-8.1280788177339911"/>
+            <point key="canvasLocation" x="21.600000000000001" y="-8.1280788177339911"/>
         </scene>
         <!--Create Memo View Controller-->
         <scene sceneID="343-RA-ftk">
@@ -143,6 +125,7 @@
                         <viewLayoutGuide key="safeArea" id="i3F-7B-yam"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <navigationItem key="navigationItem" id="ubW-QD-ywG"/>
                     <connections>
                         <outlet property="writeMemoTextView" destination="PSQ-ZH-ybe" id="T3C-b6-VPa"/>
                     </connections>
@@ -154,7 +137,6 @@
     </scenes>
     <resources>
         <image name="checkmark.square" catalog="system" width="128" height="114"/>
-        <image name="square.and.pencil" catalog="system" width="128" height="113"/>
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
