Add TableView Constraint

--- a/MyMemo/Base.lproj/Main.storyboard
+++ b/MyMemo/Base.lproj/Main.storyboard
@@ -33,9 +33,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zwq-bl-jL7">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zwq-bl-jL7">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="MyMemoListTableViewCell" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MyMemoListTableViewCell" id="UVB-ZC-bvh" customClass="MyMemoListTableViewCell" customModule="MyMemo" customModuleProvider="target">
@@ -64,10 +63,18 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TQC-QH-CZx">
+                                                    <rect key="frame" x="313" y="11" width="42" height="21"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="myMemoListButton" destination="SQC-uU-BeO" id="fkW-Ln-HFI"/>
+                                            <outlet property="myMemoListDate" destination="TQC-QH-CZx" id="vPj-Yk-DEJ"/>
                                             <outlet property="myMemoListText" destination="bqV-GV-jtA" id="LX1-4c-0Lc"/>
                                         </connections>
                                     </tableViewCell>
@@ -76,6 +83,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="zwq-bl-jL7" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="97y-lS-94x"/>
+                            <constraint firstItem="zwq-bl-jL7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bOB-8d-Cf5"/>
+                            <constraint firstAttribute="bottom" secondItem="zwq-bl-jL7" secondAttribute="bottom" id="bgC-KN-xJ9"/>
+                            <constraint firstItem="zwq-bl-jL7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="oBF-aU-R23"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="메모" largeTitleDisplayMode="always" id="fc6-vS-s6e"/>
                     <connections>
@@ -117,8 +130,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="B9Q-hY-XMo">
-                                <rect key="frame" x="0.0" y="526" width="375" height="51"/>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="B9Q-hY-XMo">
+                                <rect key="frame" x="0.0" y="526" width="375" height="210"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </datePicker>
                         </subviews>
@@ -133,6 +146,14 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="55f-m8-BNI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="756" y="-8.1280788177339911"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="nto-hf-lJX">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XvA-3D-N4f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController id="zC3-9W-YYj" sceneMemberID="viewController"/>
+            </objects>
+            <point key="canvasLocation" x="1933" y="59"/>
         </scene>
     </scenes>
     <resources>
