--- a/MyMemo/Base.lproj/Main.storyboard
+++ b/MyMemo/Base.lproj/Main.storyboard
@@ -70,6 +70,12 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k5z-nc-f3g">
+                                                    <rect key="frame" x="127" y="4" width="122" height="35"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" title="날짜/시간 선택"/>
+                                                </button>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
@@ -131,8 +137,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" style="wheels" translatesAutoresizingMaskIntoConstraints="NO" id="B9Q-hY-XMo">
-                                <rect key="frame" x="0.0" y="526" width="375" height="210"/>
+                                <rect key="frame" x="16" y="528" width="343" height="210"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="selectDate:" destination="4Qb-tl-Pqq" eventType="valueChanged" id="o4r-mh-pqU"/>
+                                </connections>
                             </datePicker>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="i3F-7B-yam"/>
@@ -146,14 +155,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="55f-m8-BNI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="756" y="-8.1280788177339911"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="nto-hf-lJX">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XvA-3D-N4f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <viewController id="zC3-9W-YYj" sceneMemberID="viewController"/>
-            </objects>
-            <point key="canvasLocation" x="1933" y="59"/>
         </scene>
     </scenes>
     <resources>
