cell 클릭 시, 내용 수정

--- a/MyMemo/Base.lproj/Main.storyboard
+++ b/MyMemo/Base.lproj/Main.storyboard
@@ -90,8 +90,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k5z-nc-f3g">
-                                                    <rect key="frame" x="172" y="5" width="154" height="35"/>
+                                                    <rect key="frame" x="172" y="5" width="183" height="35"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="tintColor" red="0.31764706970000001" green="0.64313727620000005" blue="0.9098039269" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="날짜/시간 선택"/>
                                                     <connections>
